--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
         </header>
         <article>
             <h2>artigo 001</h2>
-            <p>texto artigo 001</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda consectetur inventore, rem obcaecati optio quam ut debitis nam recusandae repellat minima veniam non fugiat soluta, quia eligendi sint asperiores ab.</p>
         </article>
         <article>
             <h2>artigo 002</h2>
-            <p> texto artigo 002</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi itaque maiores cumque nam laborum doloribus, consequuntur sit voluptatum veritatis obcaecati est voluptas ab, incidunt ex eveniet. Totam vero error dicta!</p>
         </article>
     </main>
 </body>
